--- a/src/css/site/components/_compact-form.scss
+++ b/src/css/site/components/_compact-form.scss
@@ -40,7 +40,10 @@
 	}
 
 	&__action {
+		align-items: center;
 		display: flex; // stetch height of button inside to maximum
+		flex-direction: column;
+		justify-content: center;
 
 		@include mq(xs) {
 			border-bottom-left-radius: 0;
